# auspex

./: .gitignore  .nvim.lua  LICENSE  README.md  auspex.cabal  flake.nix  hie.yaml  justfile  todo.norg
client/: Main.hs
data/: ed25519  ed25519-owner  ed25519-owner.pub  ed25519.pub  rsa  rsa.pub
docs/: authorization.puml  challenge.puml  nixos-test.puml  protocol.puml
example-app/: Application.hs  Foundation.hs  routes.yesodroutes
lib/Crypto/Error/: Utils.hs
lib/Crypto/PubKey/Ed25519/: OpenSSH.hs
lib/Data/: Challenge.hs
lib/Web/Auspex/: Provider.hs
lib/Web/JWT/: Encode.hs
lib/Yesod/Auth/: Auspex.hs
nix/: module.nix  test.nix
src/: Main.hs
test/Crypto/PubKey/Ed25519/: OpenSSHSpec.hs
test/Data/Challenge/: ChallengeSpec.hs
test/Web/Auspex/: ProviderSpec.hs
